[tool.poetry]
name = "sprint-template"
version = "0.1.0"
description = ""
authors = ["Eduardo Correa Araujo <65051489+eduardocorrearaujo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
mosqlient = "1.5.2"
epiweeks = "^2.3.0"
jupyter = "^1.0.0"
pmdarima = "^2.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
